Install ruby from ppa:brightbox/ruby-ng

--- a/app/templates/ansible/roles/webserver/tasks/main.yml
+++ b/app/templates/ansible/roles/webserver/tasks/main.yml
@@ -1,1 +1,12 @@
 ---
+- name: Install apt dependencies
+  apt: name={{ item }}
+  with_items:
+    - autoconf
+    - bison
+    - build-essential
+    - libssl-dev
+    - libyaml-dev
+    - libreadline6-dev
+    - zlib1g-dev
+    - libncurses5-dev
