--- a/app/templates/ansible/site.yml
+++ b/app/templates/ansible/site.yml
@@ -1,3 +1,7 @@
 ---
-- include: dbservers.yml
-- include: webservers.yml
+- hosts: all
+  gather_facts: no
+  roles:
+    - common
+    - webserver
+    - dbserver
