--- a/app/templates/ansible/roles/postgresql/tasks/main.yml
+++ b/app/templates/ansible/roles/postgresql/tasks/main.yml
@@ -10,9 +10,11 @@
 
 - name: Create postgresql user
   postgresql_user: name={{ postgresql_db_user }} password={{ postgresql_db_password }} role_attr_flags=CREATEDB
+  sudo_user: postgres
 
 - name: Create postgresql database
   postgresql_db: name={{ postgresql_db_name }} owner={{ postgresql_db_user }}
+  sudo_user: postgres
 
 - name: Create config/database.yml
   template: src=database.yml.j2 dest={{ app_config_path }}/database.yml owner={{ user_name }} mode=0600 backup=yes
