--- a/app/templates/ansible/roles/mysql/tasks/main.yml
+++ b/app/templates/ansible/roles/mysql/tasks/main.yml
@@ -19,3 +19,4 @@
 
 - name: Create config/database.yml
   template: src=database.yml.j2 dest={{ app_config_path }}/database.yml owner={{ user_name }} mode=0600 backup=yes
+  when: mysql_orm in ['activerecord', 'sequel', 'datamapper']
