--- a/app/templates/ansible/roles/ruby/tasks/main.yml
+++ b/app/templates/ansible/roles/ruby/tasks/main.yml
@@ -1,10 +1,6 @@
 ---
-- name: Add brightbox/ruby-ng repository
-  apt_repository: repo='ppa:brightbox/ruby-ng'
+- include: package.yml
+  when: ruby_type == 'package'
 
-- name: Install ruby
-  apt: name={{ item }}
-  with_items:
-    - "{{ ruby_version }}"
-    - "{{ ruby_version }}-dev"
-    - ruby-switch
+- include: rvm.yml
+  when: ruby_type == 'rvm'
