Handle case when redis_orm is undefined

--- a/app/templates/ansible/roles/redis/tasks/main.yml
+++ b/app/templates/ansible/roles/redis/tasks/main.yml
@@ -9,4 +9,4 @@
 
 - name: Configure redis-rb
   template: src=redis.rb.j2 dest={{ app_config_path }}/initializers/redis.rb owner={{ user_name }} backup=yes
-  when: redis_orm == 'redis-rb'
+  when: redis_orm is defined and redis_orm == 'redis-rb'
