--- a/app/templates/ansible/roles/ruby/defaults/main.yml
+++ b/app/templates/ansible/roles/ruby/defaults/main.yml
@@ -1,15 +1,15 @@
 ---
-rvm1_install_path: '/usr/local/rvm'
+rvm1_install_path: '/home/{{ ansible_ssh_user }}/.rvm'
 rvm1_rvm: '{{ rvm1_install_path }}/bin/rvm'
-rvm1_install_flags: '--auto-dotfiles'
-rvm1_user: 'root'
+rvm1_install_flags: '--auto-dotfiles --user-install'
+rvm1_user: '{{ user_name }}'
 rvm1_rvm_latest_installer: 'https://raw.githubusercontent.com/wayneeseguin/rvm/master/binscripts/rvm-installer'
 rvm1_rvm_version: 'stable'
 rvm1_rvm_check_for_updates: no
 rvm1_gpg_keys: 'D39DC0E3'
 rvm1_gpg_key_server: 'hkp://keys.gnupg.net'
 rvm1_temp_download_path: '/tmp'
-rvm1_default_ruby_version: 'ruby-{{ ruby_version }}'
+rvm1_default_ruby_version: '{{ ruby_version }}'
 rvm1_symlink_binaries:
   - 'bundle'
   - 'bundler'
