--- a/app/templates/ansible/roles/unicorn/tasks/main.yml
+++ b/app/templates/ansible/roles/unicorn/tasks/main.yml
@@ -3,7 +3,8 @@
   template: src=unicorn.rb.j2 dest={{ unicorn_config_path }}
 
 - name: Install unicorn
-  gem: name=unicorn user_install=no
+  command: /bin/bash -l -c 'gem install unicorn --no-ri --no-rdoc' chdir={{ app_path }}
+  sudo: no
 
 - name: Create upstart config
   template: src=upstart.conf.j2 dest=/etc/init/{{ unicorn_app_name }}.conf
