Add ability to edit box

--- a/app/templates/ansible/roles/ruby/tasks/main.yml
+++ b/app/templates/ansible/roles/ruby/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include: package.yml
-  when: ruby_type == 'package'
+  when: ruby_install == 'package'
 
 - include: rvm.yml
-  when: ruby_type == 'rvm'
+  when: ruby_install == 'rvm'
