--- a/app/templates/ansible/roles/ruby/defaults/main.yml
+++ b/app/templates/ansible/roles/ruby/defaults/main.yml
@@ -9,7 +9,7 @@ rvm1_rvm_check_for_updates: no
 rvm1_gpg_keys: 'D39DC0E3'
 rvm1_gpg_key_server: 'hkp://keys.gnupg.net'
 rvm1_temp_download_path: '/tmp'
-rvm1_default_ruby_version: '{{ ruby_version }}'
+rvm1_default_ruby_version: '{{ manual_ruby_version or ruby_version }}'
 rvm1_symlink_binaries:
   - 'bundle'
   - 'bundler'
