--- a/app/templates/ansible/roles/nginx/tasks/main.yml
+++ b/app/templates/ansible/roles/nginx/tasks/main.yml
@@ -7,7 +7,7 @@
   notify: restart nginx
 
 - name: Copy nginx configuration
-  template: src=nginx.conf.j2 dest=/etc/nginx/sites-available/{{ server_name }}.conf
+  template: src={{ server_type }}.conf.j2 dest=/etc/nginx/sites-available/{{ server_name }}.conf
   notify: restart nginx
 
 - name: Symlink nginx configuration
