--- a/app/templates/ansible/roles/unicorn/tasks/main.yml
+++ b/app/templates/ansible/roles/unicorn/tasks/main.yml
@@ -8,4 +8,4 @@
 
 - name: Create upstart config
   template: src=upstart.conf.j2 dest=/etc/init/{{ unicorn_app_name }}.conf
-  notify: restart unicorn
+  notify: restart application
