--- a/devops/roles/nginx/tasks/main.yml
+++ b/devops/roles/nginx/tasks/main.yml
@@ -2,6 +2,10 @@
 - name: Install nginx
   apt: name=nginx
 
+- name: Enable gzip
+  template: src=gzip.conf.j2 dest=/etc/nginx/conf.d/gzip.conf validate='nginx -t'
+  notify: restart nginx
+
 - name: Disable default nginx site
   file: path=/etc/nginx/sites-enabled/default state=absent
   notify: restart nginx
