--- a/templates/ansible/roles/ruby/tasks/main.yml
+++ b/templates/ansible/roles/ruby/tasks/main.yml
@@ -7,3 +7,11 @@
 
 - include: rbenv.yml
   when: ruby_install == 'rbenv'
+
+- name: Install bundler
+  command: /bin/bash -l -c 'gem install bundler --no-ri --no-rdoc' chdir={{ app_path }}
+  sudo: no
+
+- name: bundle install
+  command: /bin/bash -l -c 'bundle install' chdir={{ app_path }}
+  sudo: no
