--- a/templates/ansible/roles/vim/tasks/main.yml
+++ b/templates/ansible/roles/vim/tasks/main.yml
@@ -16,6 +16,6 @@
   template: src=vimrc.j2 dest={{ user_home_path }}/.vimrc owner={{ user_name }} group={{ group_name }}
 
 - name: Install plugins
-  git: repo={{ item.git }} dest={{ vim_bundle_path }}/{{ item.name }} version=master accept_hostkey=yes update=no
+  git: repo={{ item.git }} dest={{ vim_bundle_path }}/{{ item.name }} version=master accept_hostkey=yes
   sudo_user: '{{ user_name }}'
   with_items: vim_plugins
