--- a/templates/ansible/roles/ruby/tasks/rbenv.yml
+++ b/templates/ansible/roles/ruby/tasks/rbenv.yml
@@ -14,6 +14,7 @@
 
 - name: Install plugins
   git: repo={{ item.git }} dest={{ rbenv_plugins_path }}/{{ item.name }} version={{ item.version }} accept_hostkey=yes
+  sudo_user: '{{ user_name }}'
   with_items: rbenv_plugins
 
 - name: Check if ruby installed
