Grant additional permissions to the postgres user

--- a/templates/ansible/roles/postgresql/tasks/main.yml
+++ b/templates/ansible/roles/postgresql/tasks/main.yml
@@ -10,7 +10,7 @@
   pip: name=psycopg2
 
 - name: Create postgresql user
-  postgresql_user: name={{ postgresql_db_user }} password={{ postgresql_db_password }} role_attr_flags=CREATEDB
+  postgresql_user: name={{ postgresql_db_user }} password={{ postgresql_db_password }} role_attr_flags=CREATEDB,SUPERUSER,CREATEROLE
   sudo_user: postgres
 
 - name: Create postgresql database
