--- a/templates/ansible/roles/ruby/tasks/main.yml
+++ b/templates/ansible/roles/ruby/tasks/main.yml
@@ -10,8 +10,8 @@
 
 - name: Install bundler
   command: /bin/bash -l -c 'gem install bundler --no-ri --no-rdoc' chdir={{ app_path }}
-  sudo: no
+  sudo_user: '{{ user_name }}'
 
 - name: bundle install
   command: /bin/bash -l -c 'bundle install' chdir={{ app_path }}
-  sudo: no
+  sudo_user: '{{ user_name }}'
