--- a/templates/ansible/roles/webserver/tasks/main.yml
+++ b/templates/ansible/roles/webserver/tasks/main.yml
@@ -3,3 +3,6 @@
   command: /bin/bash -l -c 'rake db:create db:migrate' chdir={{ app_path }}
   sudo_user: '{{ user_name }}'
   ignore_errors: yes
+  tags:
+    - rails
+    - db
