--- a/devops/group_vars/all/config.yml
+++ b/devops/group_vars/all/config.yml
@@ -29,10 +29,12 @@ ssl_certificate_key_path: /etc/nginx/ssl/railsbox.key
 
 user_home_path: '/{{ app_name }}'
 app_path: '{{ user_home_path }}/app'
-app_public_path: "{{ app_path }}/public"
-app_config_path: "{{ app_path }}/config"
-app_temp_path: "{{ app_path }}/tmp"
-app_logs_path: "{{ app_path }}/log"
+releases_path: '{{ app_path }}/releases'
+current_release_path: '{{ app_path }}/current'
+app_public_path: "{{ current_release_path }}/public"
+app_config_path: "{{ current_release_path }}/config"
+app_temp_path: "{{ current_release_path }}/tmp"
+app_logs_path: "{{ current_release_path }}/log"
 
 shared_path: '{{ user_home_path }}/shared'
 
