--- a/templates/ansible/roles/swap/tasks/main.yml
+++ b/templates/ansible/roles/swap/tasks/main.yml
@@ -1,28 +1,40 @@
+# 2014 Kamal Nasser hello@kamal.io
+# https://github.com/kamaln7/ansible-swapfile
+# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 ---
-- name: Create swap file
-  command: fallocate -l {{ vm_swap }}M {{ swap_file_path }} creates={{ swap_file_path }}
+- name: Write swapfile
+  command: |
+    {% if swapfile_use_dd %}
+    dd if=/dev/zero of={{ swap_file_path }} bs=1M count={{ vm_swap }} creates={{ swap_file_path }}
+    {% else %}
+    fallocate -l {{ vm_swap }}M {{ swap_file_path }} creates={{ swap_file_path }}
+    {% endif %}
+  register: write_swapfile
+  when: swapfile_size != false
+    
+- name: Set swapfile permissions
+  file: path={{ swap_file_path }} mode=600
+  when: swapfile_size != false
 
-- name: Change swap permissions
-  file: path={{ swap_file_path }} mode=0600
-
-- name: Check swap file type
-  command: file {{ swap_file_path }}
-  register: swapfile
-
-- name: Make swap file
+- name: Create swapfile
   command: mkswap {{ swap_file_path }}
-  when: swapfile.stdout.find('swap file') == -1
+  register: create_swapfile
+  when: swapfile_size != false and write_swapfile.changed
 
-- name: Write swap entry in fstab
-  mount: name=none
-         src={{ swap_file_path }}
-         fstype=swap
-         opts=sw
-         passno=0
-         dump=0
-         state=present
-  register: write_swap_entry
+- name: Enable swapfile
+  command: swapon {{ swap_file_path }}
+  when: swapfile_size != false and create_swapfile.changed
 
-- name: Mount swap
-  command: "swapon {{ swap_file_path }}"
-  when: write_swap_entry|changed
+- name: Add swapfile to /etc/fstab
+  lineinfile: dest=/etc/fstab line="{{ swap_file_path }} none swap sw 0 0" state=present
+  when: swapfile_size != false
+
+- name: Configure vm.swappiness
+  lineinfile: dest=/etc/sysctl.conf line="vm.swappiness = {{ swapfile_swappiness }}" regexp="^vm.swappiness[\s]?=" state=present
+  notify: Reload sysctl
+  when: swapfile_swappiness != false
+
+- name: Configure vm.vfs_cache_pressure
+  lineinfile: dest=/etc/sysctl.conf line="vm.vfs_cache_pressure = {{ swapfile_vfs_cache_pressure }}" regexp="^vm.vfs_cache_pressure[\s]?=" state=present
+  notify: Reload sysctl
+  when: swapfile_vfs_cache_pressure != false
