--- a/spec/fixtures/Vagrantfile
+++ b/spec/fixtures/Vagrantfile
@@ -15,5 +15,7 @@ Vagrant.configure('2') do |config|
     machine.vm.box = 'ubuntu/trusty64'
 
     machine.vm.network 'private_network', ip: '192.168.20.50'
+
+    config.vm.synced_folder ".", "/vagrant", disabled: true
   end
 end
