--- a/templates/ansible/roles/ruby/tasks/main.yml
+++ b/templates/ansible/roles/ruby/tasks/main.yml
@@ -9,9 +9,10 @@
   when: ruby_install == 'rbenv'
 
 - name: Install bundler
-  command: /bin/bash -l -c 'gem install bundler --no-ri --no-rdoc' chdir={{ app_path }}
+  command: /bin/bash -l -c 'gem install bundler --no-ri --no-rdoc'
   sudo_user: '{{ ruby_user_name }}'
 
 - name: bundle install
   command: /bin/bash -l -c 'bundle install' chdir={{ app_path }}
   sudo_user: '{{ ruby_user_name }}'
+  when: target == 'virtualbox'
