--- a/templates/ansible/roles/deploy/tasks/main.yml
+++ b/templates/ansible/roles/deploy/tasks/main.yml
@@ -31,12 +31,12 @@
     chdir: '{{ this_release_path }}'
 
 - name: Precompile assets
-  command: rake assets:precompile chdir={{ this_release_path }}
+  command: bundle exec rake assets:precompile chdir={{ this_release_path }}
   environment:
     RAILS_ENV: '{{ rails_env }}'
 
 - name: Migrate database
-  command: rake db:migrate chdir={{ this_release_path }}
+  command: bundle exec rake db:migrate chdir={{ this_release_path }}
   environment:
     RAILS_ENV: '{{ rails_env }}'
 
