--- a/templates/ansible/roles/delayed_job/handlers/main.yml
+++ b/templates/ansible/roles/delayed_job/handlers/main.yml
@@ -2,3 +2,4 @@
 - name: restart delayed_job
   service: name={{ delayed_job_app_name }} state=restarted
   when: delayed_job|default(false)
+  ignore_errors: yes
