--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
+sudo: false
+language: ruby
+cache: bundler
 before_script:
   - psql -c 'create database railsbox_test;' -U postgres
+  - bundle exec rake db:test:prepare
