--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ cache: bundler
 before_script:
   - psql -c 'create database railsbox_test;' -U postgres
   - bundle exec rake db:test:prepare
+addons:
+  postgresql: '9.3'
