--- a/templates/ansible/roles/redis/tasks/main.yml
+++ b/templates/ansible/roles/redis/tasks/main.yml
@@ -14,3 +14,7 @@
 - name: Configure redis-rb
   template: src=redis.rb.j2 dest={{ app_config_path }}/initializers/redis.rb owner={{ user_name }} backup=yes
   when: redis_orm is defined and redis_orm == 'redis-rb'
+ 
+- name: Create upstart config
+  template: src=upstart.conf.j2 dest=/etc/init/redis.conf
+  notify: restart redis
