Try to install non-binary ruby if binary version is not available
Closes #13

--- a/templates/ansible/roles/ruby/tasks/rvm.yml
+++ b/templates/ansible/roles/ruby/tasks/rvm.yml
@@ -61,7 +61,17 @@
   when: item.rc != 0
   with_items: detect_rubies.results
   sudo_user: '{{ rvm1_user }}'
+  register: install_rubies
+  ignore_errors: yes
 
+# Try to install non-binary version if previous command failed
+# https://github.com/andreychernih/railsbox/issues/13
+- name: Install rubies (non-binary)
+  command: '{{ rvm1_rvm }} install {{ item.item }}'
+  when: install_rubies.results[0].rc != 0 and item.rc != 0
+  with_items: detect_rubies.results
+  sudo_user: '{{ rvm1_user }}'
+.
 - name: Detect default ruby version
   command: '{{ rvm1_rvm }} alias list default'
   changed_when: False
