--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ before_install:
 before_script:
   - psql -c 'create database railsbox_test;' -U postgres
   - bundle exec rake db:test:prepare
+script: bundle exec rspec -b
 addons:
   postgresql: '9.3'
