--- a/templates/ansible/roles/puma/defaults/main.yml
+++ b/templates/ansible/roles/puma/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 puma_app_name: "{{ app_name }}"
-server_restart_command: restart {{ app_name }}
+server_restart_command: /sbin/restart {{ app_name }}
