--- a/devops/roles/nginx/tasks/main.yml
+++ b/devops/roles/nginx/tasks/main.yml
@@ -1,34 +1,43 @@
 ---
 - name: Install nginx
   apt: name=nginx
+  tags: nginx
 
 - name: Enable gzip
   template: src=gzip.conf.j2 dest=/etc/nginx/conf.d/gzip.conf
   notify: restart nginx
+  tags: nginx
 
 - name: Disable default nginx site
   file: path=/etc/nginx/sites-enabled/default state=absent
   notify: restart nginx
+  tags: nginx
 
 - name: Copy nginx configuration
   template: src=site.conf.j2 dest=/etc/nginx/sites-available/{{ server_name }}.conf
   notify: restart nginx
+  tags: nginx
 
 - name: Symlink nginx configuration
   file: src=/etc/nginx/sites-available/{{ server_name }}.conf dest=/etc/nginx/sites-enabled/{{ server_name }}.conf state=link
   notify: restart nginx
+  tags: nginx
 
 - name: Create nginx.conf
   template: src=nginx.conf.j2 dest=/etc/nginx/nginx.conf
   notify: restart nginx
+  tags: nginx
 
 - name: Create certificates directory
   file: path={{ ssl_certificate_path|dirname }} recurse=yes state=directory
+  tags: nginx
 
 - name: Copy certificate
   copy: content="{{ ssl_cert }}" dest={{ ssl_certificate_path }} mode=0600
   notify: restart nginx
+  tags: nginx
 
 - name: Copy private key
   copy: content="{{ ssl_key }}" dest={{ ssl_certificate_key_path }} mode=0600
   notify: restart nginx
+  tags: nginx
