Use proper variable syntax for with_items so ansible tasks run on newer ansible versions

--- a/devops/roles/base/tasks/main.yml
+++ b/devops/roles/base/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: Install additional packages
   apt: name={{ item }}
-  with_items: packages
+  with_items: '{{ packages }}'
 
 - name: Install required Python modules
   pip: name=httplib2
