--- a/templates/ansible/roles/ruby/tasks/rbenv.yml
+++ b/templates/ansible/roles/ruby/tasks/rbenv.yml
@@ -15,7 +15,7 @@
 - name: Install plugins
   git: repo={{ item.git }} dest={{ rbenv_plugins_path }}/{{ item.name }} version={{ item.version }} accept_hostkey=yes
   sudo_user: '{{ user_name }}'
-  with_items: rbenv_plugins
+  with_items: '{{ rbenv_plugins }}'
 
 - name: Check if ruby installed
   shell: '{{ rbenv_bin }} versions | grep -q {{ rbenv_ruby_version }}'
