--- a/templates/ansible/roles/ruby/tasks/rvm.yml
+++ b/templates/ansible/roles/ruby/tasks/rvm.yml
@@ -54,12 +54,12 @@
   changed_when: False
   failed_when: False
   register: detect_rubies
-  with_items: rvm1_rubies
+  with_items: '{{ rvm1_rubies }}'
 
 - name: Install rubies
   command: '{{ rvm1_rvm }} install {{ item.item }} --binary'
   when: item.rc != 0
-  with_items: detect_rubies.results
+  with_items: '{{ detect_rubies.results }}'
   sudo_user: '{{ rvm1_user }}'
   register: install_rubies
   ignore_errors: yes
@@ -69,7 +69,7 @@
 - name: Install rubies (non-binary)
   command: '{{ rvm1_rvm }} install {{ item.item }}'
   when: item.rc != 0 and install_rubies.results[0].rc != 0
-  with_items: detect_rubies.results
+  with_items: '{{ detect_rubies.results }}'
   sudo_user: '{{ rvm1_user }}'
 
 - name: Detect default ruby version
@@ -91,7 +91,7 @@
     group: 'root'
     force: yes
   when: not '--user-install' in rvm1_install_flags
-  with_items: rvm1_symlink_binaries
+  with_items: '{{ rvm1_symlink_binaries }}'
 
 - name: Create rvm.sh
   template: src=rvm.sh.j2 dest={{ profile_d_path }}/rvm.sh owner={{ user_name }} group={{ group_name }}
